src/test/ui/implicit-method-bind.stderr
error[E0615]: attempted to take value of method `abs` on type `i32`
  --> $DIR/implicit-method-bind.rs:2:20
   |
LL |     let _f = 10i32.abs;
   |                    ^^^ method, not a field
   |
help: use parentheses to call the method
   |
LL |     let _f = 10i32.abs();
   |                       ++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0615`.
